--- a/src/Components/ContactInfo.css
+++ b/src/Components/ContactInfo.css
@@ -34,7 +34,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    border: 2px solid #00b489;
+    border: 2px solid #ff3300;
     /* border: 2px solid black; */
     background-color: transparent;
 }
