--- a/src/Components/Corusels.css
+++ b/src/Components/Corusels.css
@@ -1,5 +1,43 @@
-.corusel-img{
+.carousels{
+     width: 100%;
+    height: 500px;
+    position:relative;
+}
+video{   
     width: 100%;
     height: 500px;
     object-fit: cover;
+    position: absolute;
 }
+.carousels-footer{
+    width: 100%;
+    height: 90px;
+    background: rgba(40, 41, 49, 0.47);
+    opacity: 2;
+    position: absolute;
+    color: white;
+    bottom: 0;
+    left: 10px;
+}
+ .corusel-img{
+    width: 777px;
+    height: 600px;
+    object-fit: cover;
+}
+
+ul {
+  list-style: none;
+ 
+  margin-top: 3px;
+}
+
+ .con, 
+ .sos{
+  /* display: flex; */
+  /* align-items: center; */
+  
+ }
+  .sos{
+padding-top: 7px;
+  
+ }
