--- a/src/Components/Corusels.css
+++ b/src/Components/Corusels.css
@@ -11,7 +11,7 @@ video{
 }
 .carousels-footer{
     width: 100%;
-    height: 90px;
+    height: auto;
     background: rgba(40, 41, 49, 0.47);
     opacity: 2;
     position: absolute;
@@ -21,8 +21,7 @@ video{
 }
  .corusel-img{
     width: 777px;
-    height: 600px;
-    object-fit: cover;
+    height: 350px;
 }
 
 ul {
@@ -31,13 +30,29 @@ ul {
   margin-top: 3px;
 }
 
- .con, 
- .sos{
-  /* display: flex; */
-  /* align-items: center; */
-  
- }
+
   .sos{
 padding-top: 7px;
   
  }
+ .sliderContact{
+  color:  #f5f8fa;
+ }
+ .sp:hover{
+box-shadow: inset 4px 3px 5px -3px rgba(120,120,120,1);
+ }
+.phone{
+  font-size: 35px;
+;
+}
+/* .d{
+  display: inline-block;
+  justify-content: flex-start;
+} */
+.sliderSection:hover{
+  color: #ff3300;
+  cursor: pointer;
+}
+.silderMail{
+  color: #f5f8fa;
+}
